[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "lunRNG"
version = "1.0"
authors = [{ name="snailBoy"},]
description = "random library using the moon as the seed"
readme = "README.md"
requires-python = ">=3.11"
dependencies = ["pylunar"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/sna1lBoy/lunRNG"
Issues = "https://www.nasa.gov/"